# iptool

./: .editorconfig  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  deflate.c  deflate.h  filter.c  filter.h  iap.c  iap.h  inflate.c  inflate.csv  inflate.h  invert.c  invert.h  ip-parse.c  ip-parse.h  ip-range.c  ip-range.h  ip.c  ip.h  iptool.c  iptool.h  proc.c  proc.h
.zed/: settings.json
include/: arg.h  cmd.h  core.h  iap.h  proc.h
src/: cmd.c  core.c  iap.c  proc.c
src/commands/: deflate.c  diff.c  filter.c  help.c  inflate.c  invert.c  list.c  lookup.c
